--- a/plugins/dominik/deals/components/basketlist/default.htm
+++ b/plugins/dominik/deals/components/basketlist/default.htm
@@ -5,7 +5,7 @@
   <div class="basket" data-toggle="dropdown" >
   Koszyk
   <div></div>
-  <i class="fa fa-shopping-cart"></i>'
+ <i class="fa fa-shopping-cart"></i>
 </div>
   <!-- <button class="basket" type="button" id="dropdownMenuButton2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 
@@ -18,7 +18,7 @@
         <P>Zawartość koszyka:</P>
         {{dump(ev3)}}
             
-        {% for id in ev3 %}
+        {% for id in items %}
 test
 
 
@@ -30,7 +30,7 @@ test
 
 
 {% endfor %}<!-- eDay -->
-
+ 
   </div>
 </div>
 
