--- a/themes/demo/assets/css/theme.css
+++ b/themes/demo/assets/css/theme.css
@@ -461,6 +461,7 @@
 }
 body {
   padding-top: 70px;
+  background-color: rgb(88, 90, 87);
 }
 .navbar-inverse {
     background: rgba(0, 0, 0, 0.86);
